bk_ida/gccida/c3/gen_add_mult
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_add_mult/src/loop.c:8096:43: error: use of undeclared identifier 'machine_mode'
result = expand_mult_add( b, reg, m, a, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_add_mult/src/loop.c:8096:58: error: expected expression
result = expand_mult_add( b, reg, m, a, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1); 
                                                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_add_mult/src/obj/loop.o] Error 1
